--- a/schedule.css
+++ b/schedule.css
@@ -38,6 +38,12 @@ h1, h2 {
     text-align: center;
 }
 
+hr {
+    background: #000000;
+    color: #000000;
+    height: 3px;
+}
+
 iframe {
     display: block;
     margin: auto;
